--- a/design/style.css
+++ b/design/style.css
@@ -3,56 +3,61 @@ padding: 0;
 }
 
 body{
-	background-color: #0C1010;
+	background-color: #2C343B;
 }
 
 
-.blockMovie{
-	
-	width: 300px;
-	margin: 20px;
-
-	border-radius: 2px;	
-	
-	border-right:2px solid #007375;
-	border-bottom:2px solid #007375;
-}
-
-.blockMovie>img
-{
+#blockImdb{
 	width: 100%;
+	margin: 2px;
 }
 
-.blockWiki
-{
-	height:400px ;
-	width: 500px;
-	margin: 20px;
-	padding: 10px;
+#blockWiki{
+	width: 100%;
+	margin: 2px;
+}
 
-	background-color: #007375;
-	border-radius: 2px;	
-
-	color: #0C1010;
-	text-align: left;
-	font-family: sans-serif;
-	font-size: 13px;
+#blockDeleuze{
+	width: 100%;
+	margin: 2px;
 }
 
 
-.blockWiki>h1
-{
-	font-weight: bold;
-	text-decoration: underline;
-	font-size:22px;
-	line-height: 150%;
+.content1{
+	width:40px; 
+	height:60px;
+	background-color:red;
+	margin: 10px;
+	display: inline-block;
+	border-radius: 1px;
+	opacity: 0.75;
+	
 }
 
 
+.content2{
+	width:40px; 
+	height:60px;
+	background-color:red;
+	margin: 10px;
+	display: inline-block;
+	border-radius: 1px;
+	opacity: 0.75;
 
+}
 
+.content3{
 
+	width:40px; 
+	height:60px;
+	background-color:red;
+	margin: 10px;
+	display: inline-block;
+	border-radius: 1px;
+	opacity: 0.75;
+	
 
+}
 
 
 
